@@ -13,6 +13,11 @@ Zope Changes
 
       - Collector #2213: Can't edit "old" ZopePageTemplate instances.
 
+      - Collector #2235: A number of ZCatalog methods were doing boolean
+        evaluation of objects that implemented __len__ instead of checking
+        them against None. Replaced a number of "if not obj" with
+        "if obj is None".
+
       - reStructuredText/ZReST: setting raw_enabled to 0 for security
         reasons
 
